fix: add media queries to the sign in and sign up pages to improve responsiveness on mobile devicesthe
feed/post page contains bugs to be fixed

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -51,6 +51,7 @@ main {
     display: flex;
     justify-content: space-between;
     background-color: white;
+    height: 100vh;
 }
 
 main > section#userProfile > h3 {
@@ -205,7 +206,66 @@ footer > p {
 
 footer > p > a {
     color: white;
-    text-decoration: none;
-    border-bottom: 1px solid var(--color3);
+    text-decoration-color: var(--color3);
     font-style: italic;
+}
+
+@media (max-width: 1300px) {
+    h1 {
+        font-size: 40px;
+        margin-left: 10px;
+    }
+
+    header {
+        width: 100%;
+        position: fixed;
+    }
+
+    header > img {
+        width: 75px;
+    }
+
+    main {
+        flex-direction: column;
+    }
+
+    main > section#userProfile > h3 {
+        margin-top: 10px;
+        font-size: 18px;
+    }
+
+    main > section#userProfile > label > img#profilePhoto {
+        margin-top: 30px;
+        margin-left: 5px;
+    }
+
+    main > section#userProfile {
+        position: fixed;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        width: 100%;
+    }
+
+    main > section#userProfile > nav > ul {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        background-color: var(--color2);
+        display: none;
+    }
+
+    main > section#userProfile > nav > ul > li > a {
+        font-size: 12px;
+    }
+
+    main > section#feed {
+        width: 90%;
+        margin: auto;
+        margin-top: 90px;
+    }
+
 }
