--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -45,7 +45,7 @@ header {
     padding: 50px;
 }
 
-header>img {
+header > img {
     width: 100px;
 }
 
@@ -59,7 +59,7 @@ main {
 
 }
 
-main>form>section#signin {
+main > form > section#signin {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -92,4 +92,40 @@ main>form>section#signin {
     font-family: "Roboto", sans-serif;
     font-size: 1em;
     text-decoration: none;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: var(--color5);
+    color: white;
+    padding: 10px;
+}
+
+footer > p > a {
+    color: white;
+    text-decoration-color: var(--color3);
+    font-size: 1em;
+    font-style: italic;
+}
+
+@media (max-width: 600px) {
+    h1 {
+        font-size: 35px;
+    }
+
+    h3 {
+        font-size: 25px;
+    }
+
+    header > img {
+        width: 70px;
+    }
+
+    .buttonsForm {
+        width: 300px;
+        font-size: 1em;
+    }
 }
